--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 # Add any directories, files, or patterns you don't want to be tracked by version control
-__pycache__
-md_davis.egg-info
+/__pycache__/
+
+# Compiled python modules.
+*.pyc
+
+# Setuptools distribution folder.
+/dist/
+
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
+
+# FreeFileSync database
+.sync.ffs_db
