Added Energy Landscape Functionality

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,36 @@
-# Add any directories, files, or patterns you don't want to be tracked by version control
-/__pycache__/
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# Compiled python modules.
-*.pyc
+# C extensions
+*.so
 
-# Setuptools distribution folder.
-/dist/
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Python egg metadata, regenerated from source files by setuptools.
-/*.egg-info
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
 # FreeFileSync database
 .sync.ffs_db
+.vscode/
