--- a/.editorconfig
+++ b/.editorconfig
@@ -1,18 +1,23 @@
-# http://editorconfig.org
-
+# see https://editorconfig.org/
 root = true
 
 [*]
-indent_style = space
-indent_size = 4
-trim_trailing_whitespace = true
-insert_final_newline = true
-charset = utf-8
+# Use Unix-style newlines for most files (except Windows files, see below).
 end_of_line = lf
+trim_trailing_whitespace = true
+indent_style = space
+insert_final_newline = true
+indent_size = 4
+charset = utf-8
 
-[*.bat]
-indent_style = tab
+[*.{bat,cmd,ps1}]
 end_of_line = crlf
+
+[*.{yml,yaml}]
+indent_size = 2
+
+[*.tsv]
+indent_style = tab
 
 [LICENSE]
 insert_final_newline = false
