--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,23 @@
+graft docs
+graft src
+graft ci
+graft tests
+include .bumpversion.cfg
+include .coveragerc
+include .editorconfig
+
 include AUTHORS.rst
 include CONTRIBUTING.rst
 include HISTORY.rst
 include LICENSE
 include README.rst
 
+include tox.ini .travis.yml .appveyor.yml .readthedocs.yml .pre-commit-config.yaml
+
 recursive-include tests *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
 recursive-include docs *.rst conf.py Makefile make.bat *.jpg *.png *.gif
+
+global-exclude *.py[cod] __pycache__/* *.so *.dylib
