Uploaded Documentation to Read the Docs

--- a/environment.yml
+++ b/environment.yml
@@ -17,13 +17,13 @@ dependencies:
   - scikit-learn
   - scipy
   - toml
+  - pip
 
   # Required by pandas
   - openpyxl
 
   # required by plotly for png
   - psutil
-  - python-kaleido
 
   # packaging requirements
   - setuptools
