Finished Sequence and Collate Panels in GUI

--- a/dev_environment.yml
+++ b/dev_environment.yml
@@ -21,6 +21,7 @@ dependencies:
   - pip
   - psutil                # required by plotly for png
   - openpyxl              # Required by pandas
+  - wxpython
 
   # packaging requirements
   - setuptools
