--- a/environment.yml
+++ b/environment.yml
@@ -21,3 +21,4 @@ dependencies:
   - pip
   - psutil                # required by plotly for png
   - openpyxl              # Required by pandas
+  - wxpython
