--- a/dev_environment.yml
+++ b/dev_environment.yml
@@ -19,11 +19,13 @@ dependencies:
   - scipy
   - toml
   - pip
+  - pmw
   - psutil                # required by plotly for png
   - openpyxl              # Required by pandas
   - wxpython
 
   # packaging requirements
+  - pyinstaller
   - setuptools
   - wheel
   - twine
