--- a/environment.yml
+++ b/environment.yml
@@ -19,6 +19,7 @@ dependencies:
   - scipy
   - toml
   - pip
+  - pmw
   - psutil                # required by plotly for png
   - openpyxl              # Required by pandas
   - wxpython
