--- a/dev_environment.yml
+++ b/dev_environment.yml
@@ -14,7 +14,7 @@ dependencies:
   - numpy
   - pandas
   - plotly>=4.0
-  - pymol-open-source     # replace with pymol-bundle if you have a PyMOL license
+  - pymol-bundle
   - scikit-learn
   - scipy
   - toml
