--- a/dev_environment.yml
+++ b/dev_environment.yml
@@ -1,20 +1,20 @@
-name: md_davis_env
+name: md-davis-dev
 channels:
   - schrodinger
   - conda-forge
   - defaults
 dependencies:
-  - python>3.7
+  - python>3
   - biopandas
   - biopython
   - click
-  - h5py>=3.0
+  - h5py
   - matplotlib
   - mdtraj
   - numpy
   - pandas
-  - plotly>=4.0
-  - pymol-bundle
+  - plotly
+  - pymol=2.2.3
   - scikit-learn
   - scipy
   - toml
@@ -35,7 +35,7 @@ dependencies:
   - flake8
 
   # docs requirements
-  - sphinx>=1.3
+  - sphinx
   - myst-parser
   - pydata-sphinx-theme
   - sphinx-panels
