--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,183 @@
-biopandas
-biopython
-click
-docopt
-flake8
-h5py>=3.0
-importlib_metadata
-matplotlib
-mdtraj
-more_itertools
-numpy>=1.17.5
-openpyxl
-pandas
-plotly
-psutil
-pyflakes
-pylint
-kaleido
-scikit-learn
-scipy
-setuptools
-toml
-twine
-wheel
-wxpython
-zipp
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+alabaster=0.7.12=py_0
+altgraph=0.17.2=pyhd8ed1ab_0
+apbs=1.5=1
+astroid=2.8.0=py36ha15d459_0
+astunparse=1.6.3=pyhd8ed1ab_0
+attrs=21.4.0=pyhd8ed1ab_0
+babel=2.9.1=pyh44b312d_0
+beautifulsoup4=4.10.0=pyha770c72_0
+biopandas=0.2.9=pyhd8ed1ab_0
+biopython=1.79=py36h68aa20f_0
+bleach=4.1.0=pyhd8ed1ab_0
+blosc=1.21.0=h0e60522_0
+brotlipy=0.7.0=py36h68aa20f_1001
+bzip2=1.0.8=h8ffe710_4
+ca-certificates=2021.10.8=h5b45459_0
+cached-property=1.5.2=hd8ed1ab_1
+cached_property=1.5.2=pyha770c72_1
+certifi=2021.5.30=py36ha15d459_0
+cffi=1.14.6=py36he58ceb7_1
+charset-normalizer=2.0.12=pyhd8ed1ab_0
+click=8.0.1=py36ha15d459_0
+cmarkgfm=0.6.0=py36h68aa20f_0
+colorama=0.4.4=pyh9f0ad1d_0
+cryptography=35.0.0=py36hd0de82c_0
+cycler=0.11.0=pyhd8ed1ab_0
+docopt=0.6.2=pypi_0
+docutils=0.17.1=py36ha15d459_0
+et_xmlfile=1.0.1=py_1001
+flake8=3.9.2=pyhd8ed1ab_0
+freemol=1.158=py_2
+freetype=2.8.1=ha63716d_1
+future=0.18.2=py36ha15d459_3
+glew=2.0.0=0
+h5py=3.1.0=nompi_py36hf359dfe_100
+hdf5=1.10.6=nompi_h5268f04_1114
+icu=64.2=he025d50_1
+idna=3.3=pyhd8ed1ab_0
+imagesize=1.3.0=pyhd8ed1ab_0
+importlib-metadata=4.8.1=py36ha15d459_0
+importlib_metadata=4.8.1=hd8ed1ab_1
+intel-openmp=2022.0.0=h57928b3_3663
+isort=5.10.1=pyhd8ed1ab_0
+jbig=2.1=h8d14728_2003
+jinja2=3.0.3=pyhd8ed1ab_0
+joblib=1.1.0=pyhd8ed1ab_0
+jpeg=9e=h8ffe710_0
+keyring=23.2.1=py36ha15d459_0
+kiwisolver=1.3.1=py36he95197e_1
+krb5=1.19.2=h20d022d_3
+lazy-object-proxy=1.6.0=py36h68aa20f_0
+lerc=3.0=h0e60522_0
+libblas=3.9.0=13_win64_mkl
+libcblas=3.9.0=13_win64_mkl
+libcurl=7.81.0=h789b8ee_0
+libdeflate=1.10=h8ffe710_0
+libiconv=1.16=he774522_0
+liblapack=3.9.0=13_win64_mkl
+libpng=1.6.37=h1d00b33_2
+libssh2=1.10.0=h680486a_2
+libtiff=4.3.0=hc4061b1_3
+libxml2=2.9.12=hf5bbc77_1
+libzlib=1.2.11=h8ffe710_1013
+lz4-c=1.9.3=h8ffe710_1
+m2w64-gcc-libgfortran=5.3.0=6
+m2w64-gcc-libs=5.3.0=7
+m2w64-gcc-libs-core=5.3.0=7
+m2w64-gmp=6.1.0=2
+m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+macholib=1.14=pyh9f0ad1d_1
+markdown-it-py=2.0.1=pyhd8ed1ab_0
+markupsafe=2.0.1=py36h68aa20f_0
+matplotlib=2.2.2=py36h153e9ff_1
+mccabe=0.6.1=py_1
+md-davis=0.3.0=dev_0
+mdit-py-plugins=0.3.0=pyhd8ed1ab_0
+mdtraj=1.9.7=py36h003c66d_1
+mdurl=0.1.0=pyhd8ed1ab_0
+mengine=1=0
+mkl=2022.0.0=h0e2418a_796
+mock=4.0.3=py36ha15d459_1
+more-itertools=8.12.0=pypi_0
+mpeg_encode=1=0
+msgpack-python=1.0.2=py36he95197e_1
+msys2-conda-epoch=20160418=1
+mtz2ccp4_px=1.0=1
+myst-parser=0.17.0=pyhd8ed1ab_0
+numexpr=2.7.3=py36h1dd77cb_0
+numpy=1.19.5=py36h4b40d73_2
+olefile=0.46=pyh9f0ad1d_1
+openpyxl=3.0.9=pyhd8ed1ab_0
+openssl=1.1.1l=h8ffe710_0
+packaging=21.3=pyhd8ed1ab_0
+pandas=1.1.5=py36he38d939_0
+pathlib2=2.3.6=py36ha15d459_0
+pdb2pqr=2.1.2+pymol=py_0
+pefile=2021.9.3=pyhd8ed1ab_0
+pillow=5.2.0=py36h885925d_1
+pip=21.3.1=pyhd8ed1ab_0
+pipreqs=0.4.11=pypi_0
+pkginfo=1.8.2=pyhd8ed1ab_0
+platformdirs=2.5.1=pyhd8ed1ab_0
+plotly=5.6.0=pyhd8ed1ab_0
+pmw=2.0.1=pypi_0
+psutil=5.8.0=py36h68aa20f_1
+pthread-stubs=0.4=hcd874cb_1001
+pycodestyle=2.7.0=pyhd8ed1ab_0
+pycparser=2.21=pyhd8ed1ab_0
+pydata-sphinx-theme=0.7.2=pyhd8ed1ab_0
+pyflakes=2.3.1=pyhd8ed1ab_0
+pygments=2.11.2=pyhd8ed1ab_0
+pyinstaller=4.5.1=py36hc69ef3d_0
+pyinstaller-hooks-contrib=2022.2=pyhd8ed1ab_0
+pylint=2.11.1=pyhd8ed1ab_0
+pymol=2.2.3=py36h6538335_0
+pyopenssl=22.0.0=pyhd8ed1ab_0
+pyparsing=3.0.7=pyhd8ed1ab_0
+pypubsub=4.0.3=py_0
+pyqt=5.9.2=py36h6538335_4
+pyreadline=2.1=py36ha15d459_1004
+pysocks=1.7.1=py36ha15d459_3
+pytables=3.6.1=py36hccbc503_3
+python=3.6.15=h39d44d4_0_cpython
+python-dateutil=2.8.2=pyhd8ed1ab_0
+python_abi=3.6=2_cp36m
+pytz=2021.3=pyhd8ed1ab_0
+pywin32=301=py36h68aa20f_0
+pywin32-ctypes=0.2.0=py36ha15d459_1003
+pyyaml=5.4.1=py36h68aa20f_1
+qt=5.9.7=h506e8af_3
+readme_renderer=27.0=pyh9f0ad1d_0
+requests=2.27.1=pyhd8ed1ab_0
+requests-toolbelt=0.9.1=py_0
+rfc3986=2.0.0=pyhd8ed1ab_0
+rigimol=1.3=2
+scikit-learn=0.24.2=py36h5a2dbc3_1
+scipy=1.5.3=py36h27d303f_1
+setuptools=58.0.4=py36ha15d459_2
+simplemmtf-python=0.2=0
+sip=4.19.8=py36h6538335_1000
+six=1.16.0=pyh6c4a22f_0
+snappy=1.1.8=ha925a31_3
+snowballstemmer=2.2.0=pyhd8ed1ab_0
+soupsieve=2.3.1=pyhd8ed1ab_0
+sphinx=4.4.0=pyh6c4a22f_1
+sphinx-click=3.1.0=pyhd8ed1ab_0
+sphinx-panels=0.6.0=pyhd8ed1ab_0
+sphinxcontrib-applehelp=1.0.2=py_0
+sphinxcontrib-devhelp=1.0.2=py_0
+sphinxcontrib-htmlhelp=2.0.0=pyhd8ed1ab_0
+sphinxcontrib-jsmath=1.0.1=py_0
+sphinxcontrib-qthelp=1.0.3=py_0
+sphinxcontrib-serializinghtml=1.1.5=pyhd8ed1ab_1
+sqlite=3.37.0=h8ffe710_0
+tbb=2021.5.0=h2d74725_0
+tenacity=8.0.1=pyhd8ed1ab_0
+threadpoolctl=3.1.0=pyh8a188c0_0
+tk=8.6.12=h8ffe710_0
+toml=0.10.2=pyhd8ed1ab_0
+tornado=6.1=py36h68aa20f_1
+tqdm=4.62.3=pyhd8ed1ab_0
+twine=3.8.0=pyhd8ed1ab_0
+typed-ast=1.4.3=py36h68aa20f_0
+typing-extensions=4.1.1=hd8ed1ab_0
+typing_extensions=4.1.1=pyha770c72_0
+ucrt=10.0.20348.0=h57928b3_0
+urllib3=1.26.8=pyhd8ed1ab_1
+vc=14.2=hb210afc_6
+vs2013_runtime=12.0.21005=1
+vs2015_runtime=14.29.30037=h902a5da_6
+webencodings=0.5.1=py_1
+wheel=0.37.1=pyhd8ed1ab_0
+win_inet_pton=1.1.0=py36ha15d459_2
+wrapt=1.12.1=py36h68aa20f_3
+wxpython=4.1.1=py36h6111442_2
+xz=5.2.5=h62dcd97_1
+yaml=0.2.5=h8ffe710_2
+yarg=0.1.9=pypi_0
+zipp=3.6.0=pyhd8ed1ab_0
+zlib=1.2.11=h8ffe710_1013
+zstd=1.5.2=h6255e5f_0
