setup.cfg added to bumpversion

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,6 +7,10 @@ tag = True
 search = version='{current_version}'
 replace = version='{new_version}'
 
+[bumpversion:file:setup.cfg]
+search = version='{current_version}'
+replace = version='{new_version}'
+
 [bumpversion:file (badge):README.rst]
 search = /v{current_version}.svg
 replace = /v{new_version}.svg
@@ -15,10 +19,10 @@ replace = /v{new_version}.svg
 search = /v{current_version}...master
 replace = /v{new_version}...master
 
-[bumpversion:file:docs/conf.py]
+[bumpversion:file:docs/source/conf.py]
 search = version = release = '{current_version}'
 replace = version = release = '{new_version}'
 
-[bumpversion:file:src/md_davis/__init__.py]
+[bumpversion:file:md_davis/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
