--- a/docs/doc_environment.yml
+++ b/docs/doc_environment.yml
@@ -1,8 +1,7 @@
 name: md-davis-doc
 channels:
-  - schrodinger
   - conda-forge
-  - defaults
+  - nodefaults
 dependencies:
   - python=3.8
   - biopandas=0.2.9
@@ -13,7 +12,7 @@ dependencies:
   - numpy=1.22.2
   - pandas=1.4.1
   - plotly=5.6.0
-  - pymol-open-source
+  - pymol-open-source=2.5.0
   - scikit-learn=1.0.2
   - scipy=1.8.0
   - pip=22.0.3
