--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,7 @@
 name: md-davis
 channels:
-  - schrodinger
   - conda-forge
-  - defaults
+  - nodefaults
 dependencies:
   - python>3.7
   - biopandas
@@ -14,7 +13,7 @@ dependencies:
   - numpy
   - pandas
   - plotly>=4.0
-  - pymol-bundle
+  - pymol-open-source=2.5.0
   - scikit-learn
   - scipy
   - toml
