--- a/docs/doc_environment.yml
+++ b/docs/doc_environment.yml
@@ -12,7 +12,7 @@ dependencies:
   - numpy=1.22.2
   - pandas=1.4.1
   - plotly=5.6.0
-  - pymol-open-source=2.5.0
+  - pymol-open-source=2.4.0
   - scikit-learn=1.0.2
   - scipy=1.8.0
   - pip=22.0.3
@@ -26,3 +26,4 @@ dependencies:
   - pydata-sphinx-theme
   - sphinx-panels
   - sphinx-click
+  - sphinx-tabs
