--- a/conda_environments/environment_pymol.yml
+++ b/conda_environments/environment_pymol.yml
@@ -1,7 +1,13 @@
-name: md-davis-dev
+# This file can be used to create a conda virtual environment for MD DaVis
+# and install the necessary dependencies. Use the following command:
+#
+#     conda env create --file environment_pymol.yml
+
+name: md-davis-pymol
 channels:
   - conda-forge
   - nodefaults
+  - schrodinger
 dependencies:
   - python>3.7
   - biopandas
@@ -13,7 +19,7 @@ dependencies:
   - numpy
   - pandas
   - plotly>=4.0
-  - pymol-open-source=2.5.0
+  - pymol-bundle=2.5.0
   - scikit-learn
   - scipy
   - toml
@@ -22,20 +28,3 @@ dependencies:
   - psutil                # required by plotly for png
   - openpyxl              # Required by pandas
   - wxpython
-
-  # packaging requirements
-  - cx_freeze
-  - setuptools
-  - wheel
-  - twine
-
-  # linting and checking
-  - pylint
-  - flake8
-
-  # docs requirements
-  - sphinx
-  - myst-parser
-  - pydata-sphinx-theme
-  - sphinx-panels
-  - sphinx-click
