--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -16,6 +16,6 @@ conda:
   environment: conda_environments/doc_environment.yml
 
 build:
-  os: ubuntu-22.04
+  os: ubuntu-lts-latest
   tools:
-    python: "miniconda3-4.7"
+    python: "mambaforge-latest"
