--- a/conda_environments/doc_environment.yml
+++ b/conda_environments/doc_environment.yml
@@ -1,32 +1,242 @@
-# This conda environment file is for readthedocs
-
 name: md-davis-doc
 channels:
   - conda-forge
-  - nodefaults
+  - defaults
 dependencies:
-  - python=3.8
-  - attrdict
-  - biopandas=0.2.9
-  - biopython=1.79
-  - click=8.0.4
-  - matplotlib=3.5.1
-  - mdtraj=1.9.7
-  - numpy=1.22.2
-  - pandas=1.4.1
-  - plotly=5.6.0
-  - pymol-open-source=2.4.0
-  - scikit-learn=1.0.2
-  - scipy=1.8.0
-  - pip=22.0.3
-  - wxpython=4.1.1
-  - h5py=3.6.0
-  - toml=0.10.2
-
-  # docs requirements
-  - sphinx
-  - myst-parser
-  - pydata-sphinx-theme
-  - sphinx-panels
-  - sphinx-click
-  - sphinx-tabs
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - accessible-pygments=0.0.4=pyhd8ed1ab_0
+  - alabaster=0.7.16=pyhd8ed1ab_0
+  - alsa-lib=1.2.11=hd590300_1
+  - astunparse=1.6.3=pyhd8ed1ab_0
+  - atk-1.0=2.38.0=hd4edc92_1
+  - attr=2.5.1=h166bdaf_1
+  - attrdict=2.0.1=pyhd8ed1ab_1
+  - babel=2.14.0=pyhd8ed1ab_0
+  - beautifulsoup4=4.12.3=pyha770c72_0
+  - biopandas=0.4.1=pyhd8ed1ab_1
+  - biopython=1.83=py39hd1e30aa_0
+  - blosc=1.21.5=h0f2a231_0
+  - brotli=1.1.0=hd590300_1
+  - brotli-bin=1.1.0=hd590300_1
+  - brotli-python=1.1.0=py39h3d6467e_1
+  - bzip2=1.0.8=hd590300_5
+  - c-ares=1.28.1=hd590300_0
+  - c-blosc2=2.14.0=hb4ffafa_0
+  - ca-certificates=2024.2.2=hbcca054_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - cairo=1.18.0=h3faef2a_0
+  - certifi=2024.2.2=pyhd8ed1ab_0
+  - charset-normalizer=3.3.2=pyhd8ed1ab_0
+  - click=8.1.7=unix_pyh707e725_0
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - contourpy=1.2.0=py39h7633fee_0
+  - cycler=0.12.1=pyhd8ed1ab_0
+  - dbus=1.13.6=h5008d03_3
+  - docutils=0.17.1=py39hf3d152e_4
+  - expat=2.6.2=h59595ed_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_1
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.50.0=py39hd1e30aa_0
+  - freetype=2.12.1=h267a509_2
+  - fribidi=1.0.10=h36c2ea0_0
+  - gdk-pixbuf=2.42.10=h829c605_5
+  - gettext=0.21.1=h27087fc_0
+  - glew=2.1.0=h9c3ff4c_2
+  - glib=2.80.0=hf2295e7_1
+  - glib-tools=2.80.0=hde27a5a_1
+  - glm=0.9.9.8=h00ab1b0_0
+  - graphite2=1.3.13=h59595ed_1003
+  - gst-plugins-base=1.22.9=hfa15dee_1
+  - gstreamer=1.22.9=h98fc4e7_1
+  - gtk2=2.24.33=h280cfa0_4
+  - h5py=3.10.0=nompi_py39h2c511df_101
+  - harfbuzz=8.3.0=h3d44ed6_0
+  - hdf4=4.2.15=h2a13503_7
+  - hdf5=1.14.3=nompi_h4f84152_100
+  - icu=73.2=h59595ed_0
+  - idna=3.6=pyhd8ed1ab_0
+  - imagesize=1.4.1=pyhd8ed1ab_0
+  - importlib-metadata=7.1.0=pyha770c72_0
+  - importlib-resources=6.4.0=pyhd8ed1ab_0
+  - importlib_resources=6.4.0=pyhd8ed1ab_0
+  - jinja2=3.1.3=pyhd8ed1ab_0
+  - joblib=1.3.2=pyhd8ed1ab_0
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.5=py39h7633fee_1
+  - krb5=1.21.2=h659d440_0
+  - lame=3.100=h166bdaf_1003
+  - lcms2=2.16=hb7c19ff_0
+  - ld_impl_linux-64=2.40=h41732ed_0
+  - lerc=4.0.0=h27087fc_0
+  - libaec=1.1.3=h59595ed_0
+  - libblas=3.9.0=21_linux64_openblas
+  - libbrotlicommon=1.1.0=hd590300_1
+  - libbrotlidec=1.1.0=hd590300_1
+  - libbrotlienc=1.1.0=hd590300_1
+  - libcap=2.69=h0f662aa_0
+  - libcblas=3.9.0=21_linux64_openblas
+  - libclang-cpp15=15.0.7=default_h127d8a8_5
+  - libclang13=18.1.2=default_h5d6823c_1
+  - libcups=2.3.3=h4637d8d_4
+  - libcurl=8.7.1=hca28451_0
+  - libdeflate=1.20=hd590300_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=hd590300_2
+  - libevent=2.1.12=hf998b51_1
+  - libexpat=2.6.2=h59595ed_0
+  - libffi=3.4.2=h7f98852_5
+  - libflac=1.4.3=h59595ed_0
+  - libgcc-ng=13.2.0=h807b86a_5
+  - libgcrypt=1.10.3=hd590300_0
+  - libgfortran-ng=13.2.0=h69a702a_5
+  - libgfortran5=13.2.0=ha4646dd_5
+  - libglib=2.80.0=hf2295e7_1
+  - libglu=9.0.0=hac7e632_1003
+  - libgomp=13.2.0=h807b86a_5
+  - libgpg-error=1.48=h71f35ed_0
+  - libiconv=1.17=hd590300_2
+  - libjpeg-turbo=3.0.0=hd590300_1
+  - liblapack=3.9.0=21_linux64_openblas
+  - libllvm15=15.0.7=hb3ce162_4
+  - libllvm18=18.1.2=h2448989_0
+  - libnetcdf=4.9.2=nompi_h9612171_113
+  - libnghttp2=1.58.0=h47da74e_1
+  - libnsl=2.0.1=hd590300_0
+  - libogg=1.3.4=h7f98852_1
+  - libopenblas=0.3.26=pthreads_h413a1c8_0
+  - libopus=1.3.1=h7f98852_1
+  - libpng=1.6.43=h2797004_0
+  - libpq=16.2=h33b98f1_1
+  - libsndfile=1.2.2=hc60ed4a_1
+  - libsqlite=3.45.2=h2797004_0
+  - libssh2=1.11.0=h0841786_0
+  - libstdcxx-ng=13.2.0=h7e041cc_5
+  - libsystemd0=255=h3516f8a_1
+  - libtiff=4.6.0=h1dd3fc0_3
+  - libuuid=2.38.1=h0b41bf4_0
+  - libvorbis=1.3.7=h9c3ff4c_0
+  - libwebp-base=1.3.2=hd590300_0
+  - libxcb=1.15=h0b41bf4_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libxkbcommon=1.7.0=h662e7e4_0
+  - libxml2=2.12.6=h232c23b_1
+  - libzip=1.10.1=h2629f0a_3
+  - libzlib=1.2.13=hd590300_5
+  - lz4-c=1.9.4=hcb278e6_0
+  - lzo=2.10=h516909a_1000
+  - markdown-it-py=2.2.0=pyhd8ed1ab_0
+  - markupsafe=2.1.5=py39hd1e30aa_0
+  - matplotlib=3.8.3=py39hf3d152e_0
+  - matplotlib-base=3.8.3=py39he9076e7_0
+  - mdit-py-plugins=0.4.0=pyhd8ed1ab_0
+  - mdtraj=1.9.9=py39h67e0f1a_1
+  - mdurl=0.1.2=pyhd8ed1ab_0
+  - mpg123=1.32.4=h59595ed_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mysql-common=8.3.0=hf1915f5_4
+  - mysql-libs=8.3.0=hca2cd23_4
+  - myst-parser=0.18.1=pyhd8ed1ab_0
+  - ncurses=6.4.20240210=h59595ed_0
+  - nomkl=1.0=h5ca1d4c_0
+  - nspr=4.35=h27087fc_0
+  - nss=3.98=h1d7d5a4_0
+  - numexpr=2.9.0=py39hb68c0d3_100
+  - numpy=1.26.4=py39h474f0d3_0
+  - openjpeg=2.5.2=h488ebb8_0
+  - openssl=3.2.1=hd590300_1
+  - packaging=24.0=pyhd8ed1ab_0
+  - pandas=2.2.1=py39hddac248_0
+  - pango=1.52.2=ha41ecd1_0
+  - pathlib2=2.3.7.post1=py39hf3d152e_3
+  - pcre2=10.43=hcad00b1_0
+  - pillow=10.2.0=py39had0adad_0
+  - pip=24.0=pyhd8ed1ab_0
+  - pixman=0.43.2=h59595ed_0
+  - plotly=5.19.0=pyhd8ed1ab_0
+  - ply=3.11=py_1
+  - pmw=2.0.1=py39hf3d152e_1008
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - pulseaudio-client=17.0=hb77b528_0
+  - py-cpuinfo=9.0.0=pyhd8ed1ab_0
+  - pydata-sphinx-theme=0.13.3=pyhd8ed1ab_0
+  - pygments=2.17.2=pyhd8ed1ab_0
+  - pymol-open-source=2.5.0=py39he03f1b4_6
+  - pyparsing=3.1.2=pyhd8ed1ab_0
+  - pypubsub=4.0.3=py_0
+  - pyqt=5.15.9=py39h52134e7_5
+  - pyqt5-sip=12.12.2=py39h3d6467e_5
+  - pysocks=1.7.1=pyha2e5f31_6
+  - pytables=3.9.2=py39hfbd31a7_1
+  - python=3.9.19=h0755675_0_cpython
+  - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python-tzdata=2024.1=pyhd8ed1ab_0
+  - python_abi=3.9=4_cp39
+  - pytz=2024.1=pyhd8ed1ab_0
+  - pyyaml=6.0.1=py39hd1e30aa_1
+  - qt-main=5.15.8=h112747c_20
+  - readline=8.2=h8228510_1
+  - requests=2.31.0=pyhd8ed1ab_0
+  - scikit-learn=1.4.1.post1=py39ha22ef79_0
+  - scipy=1.12.0=py39h474f0d3_2
+  - setuptools=69.2.0=pyhd8ed1ab_0
+  - sip=6.7.12=py39h3d6467e_0
+  - six=1.16.0=pyh6c4a22f_0
+  - snappy=1.1.10=h9fff704_0
+  - snowballstemmer=2.2.0=pyhd8ed1ab_0
+  - soupsieve=2.5=pyhd8ed1ab_1
+  - sphinx=4.5.0=pyh6c4a22f_0
+  - sphinx-click=5.1.0=pyhd8ed1ab_0
+  - sphinx-favicon=1.0.1=pyhd8ed1ab_0
+  - sphinx-panels=0.6.0=pyhd8ed1ab_0
+  - sphinx-tabs=3.4.1=pyhd8ed1ab_0
+  - sphinxcontrib-applehelp=1.0.4=pyhd8ed1ab_0
+  - sphinxcontrib-devhelp=1.0.2=py_0
+  - sphinxcontrib-htmlhelp=2.0.1=pyhd8ed1ab_0
+  - sphinxcontrib-jsmath=1.0.1=pyhd8ed1ab_0
+  - sphinxcontrib-qthelp=1.0.3=py_0
+  - sphinxcontrib-serializinghtml=1.1.5=pyhd8ed1ab_2
+  - tenacity=8.2.3=pyhd8ed1ab_0
+  - threadpoolctl=3.4.0=pyhc1e730c_0
+  - tk=8.6.13=noxft_h4845f30_101
+  - toml=0.10.2=pyhd8ed1ab_0
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - tornado=6.4=py39hd1e30aa_0
+  - typing-extensions=4.10.0=hd8ed1ab_0
+  - typing_extensions=4.10.0=pyha770c72_0
+  - tzdata=2024a=h0c530f3_0
+  - unicodedata2=15.1.0=py39hd1e30aa_0
+  - urllib3=2.2.1=pyhd8ed1ab_0
+  - wheel=0.43.0=pyhd8ed1ab_1
+  - wxpython=4.2.1=py39h4050a87_4
+  - xcb-util=0.4.0=hd590300_1
+  - xcb-util-image=0.4.0=h8ee46fc_1
+  - xcb-util-keysyms=0.4.0=h8ee46fc_1
+  - xcb-util-renderutil=0.3.9=hd590300_1
+  - xcb-util-wm=0.4.1=h8ee46fc_1
+  - xkeyboard-config=2.41=hd590300_0
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.1.1=hd590300_0
+  - xorg-libsm=1.2.4=h7391055_0
+  - xorg-libx11=1.8.7=h8ee46fc_0
+  - xorg-libxau=1.0.11=hd590300_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxrender=0.9.11=hd590300_0
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h0b41bf4_1003
+  - xorg-xf86vidmodeproto=2.3.1=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
+  - xz=5.2.6=h166bdaf_0
+  - yaml=0.2.5=h7f98852_2
+  - zipp=3.17.0=pyhd8ed1ab_0
+  - zlib=1.2.13=hd590300_5
+  - zlib-ng=2.0.7=h0b41bf4_0
+  - zstd=1.5.5=hfc55251_0
+prefix: /home/djmaity/miniconda3/envs/md-davis-doc
