--- a/conda_environments/environment_dev.yml
+++ b/conda_environments/environment_dev.yml
@@ -19,7 +19,7 @@ dependencies:
   - numpy
   - pandas
   - plotly>=4.0
-  - pymol-open-source=2.5.0
+  - pymol-open-source
   - scikit-learn
   - scipy
   - toml
