--- a/conda_environments/environment_pymol_dev.yml
+++ b/conda_environments/environment_pymol_dev.yml
@@ -20,7 +20,7 @@ dependencies:
   - numpy
   - pandas
   - plotly>=4.0
-  - pymol-bundle=2.5.0
+  - pymol-bundle
   - scikit-learn
   - scipy
   - toml
